Mon Apr 30 02:35:02 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * debian/control: update section and priorities to match the dinstall
    overrides

Sat Apr 28 16:17:58 CDT 2001 Adam Heath <doogie@debian.org>

  * utils/md5sum.c, debian/changelog: Fix md5sum -c.

Sat Apr 28 15:22:25 CDT 2001 Adam Heath <doogie@debian.org>

  * lib/nfmalloc.c: in nfstrnsave, don't set the char after the end, but
    set the end, to \0.
  * lib/parse.c: Don't loose the last char of a field value, when EOF is
    hit.

Sat Apr 28 14:31:27 CDT 2001 Adam Heath <doogie@debian.org>

  * scripts/dpkg-divert.pl, debian/changelog: Fix removing of diversions.
    This has always been broken, but was just masked by another bug, that
    made it work. :|

Sat Apr 28 12:18:55 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-buildpackage.sh: only check for valid sign interface
    when the user specifies one
   
Sat Apr 28 03:33:28 CDT 2001 Adam Heath <doogie@debian.org>

  * debian/dpkg.cfg: Changed to include no-debsig by default, as no debs
    are currently signed, and we get false errors when debsig-verify is
    installed.  This will be removed in the future, when the archive tools
    support package signatures.

Fri Apr 27 20:43:25 CDT 2001 Adam Heath <doogie@debian.org>

  * lib/nfmalloc.c: nfstrnsave() was not allocated n+1 chars, and was not
    setting the n+1 byte to \0.

Sat Apr 28 02:52:56 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-shlibdeps.pl: do not care if dpkg --search returns
    with an error: it will do that know if we search for something
    that is not installed which is a valid case for us.

Fri Apr 27 13:14:04 CDT 2001 Adam Heath <doogie@debian.org>

  * lib/parse.c, debian/changelog: Fix a segfault when reading an empty
    file in parsedb(), imported from head.

Thu Apr 26 13:15:02 CDT 2001 Adam Heath <doogie@debian.org>

  * main/configure.c: Update to work with recent lib/mlib.c change in
    md5 handling.
