@@ -17,3 +17,4 @@ config.log
 build
 stamp-build
 stamp-binary
+stamp-binary-static
