@@ -66,13 +66,14 @@ SSD_LIBS		= @SSD_LIBS@
 
 ZLIB_CFLAGS		= @ZLIB_CFLAGS@
 ZLIB_LIBS		= @ZLIB_LIBS@
+ZLIB_LIBS_ALSO_STATIC	= @ZLIB_LIBS_ALSO_STATIC@
 
 ALL_CFLAGS		= $(CFLAGS) $(DEFS) $(NLS_CFLAGS) $(INCLUDE_CFLAGS) $(ZLIB_CFLAGS) 
 ALL_CXXFLAGS		= $(ALL_CFLAGS) $(CXXFLAGS)
 
+ALSO_STATIC		= @ALSO_STATIC@
 .c.o:
 	$(CC) $(ALL_CFLAGS) -c $<
 
 .cc.o:
 	$(CXX) $(ALL_CXXFLAGS) -c $<
-
