@@ -1,6 +1,5 @@
-tmp-dpkg
-tmp-dpkg-dev
-tmp-dpkg-doc
+tmp
 files
 substvars
 dpkg.substvars
+dpkg-static.substvars
