@@ -1,3 +1,12 @@
+Sun Apr 29 22:08:37 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * Makefile.conf.in, configure.in, debian/control, debian/rules,
+    dpkg-deb/Makefile.in, main/Makefile.in, utils/Makefile.in,
+    .cvsignore debian/.cvsignore: Added -static support.  There is support
+    for building a dpkg-static.deb, but this is not used during a normal
+    run.  However, a -static.nondebbin.tar.gz file is created, in addition
+    to the normal nondebbin.tar.gz.
+
 Mon Apr 30 02:35:02 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/control: update section and priorities to match the dinstall
